+ moveBooksToOtherAuthor
